   * Unit overlays are now displayed in the Recall dialog, both on the list
     and the description panel.
   * Made filtering controls on the MP create screen functional.
   * Removed the MP custom options dialog; all options are now shown directly
     on the configuration screen.
   * Removed the MP modifications dialog; modifications are now displayed
     directly on the creation screen.
 * WML engine:
   * WML variable turn_number is set correctly (to 1) in prestart and start
     events.  Previously, it retained its last value from the previous scenario
     until after the start event.
   * [scroll_to] and [scroll_to_unit] now take an optional side filter.
   * [trait] now accepts a "generate_description=" attribute, allowing the
     auto-generated effect descriptions to be turned off.
   * [modify_side] can now change a side's flags and status bar icon using the
     "flag" and "flag_icon" attributes also accepted in [side] definitions
     (bug #18454).
   * [store_side] now stores the "flag", "flag_icon", and "village_support"
     attributes from sides.
   * New macros RECALL and RECALL_XY
 * Miscellaneous and bug fixes:
   * Pango markup is applied correctly and consistently in button tooltips.
   * Fixed mishandling of invalid Pango markup resulting in previous messages
     being displayed instead in e.g. [message] (bug #20996).
   * Added wmllint code for recognizing unit id fields in macros.
   * Refactored code in wmltools to create a macro-parsing function.
   * Added era descriptions.

Version 1.11.7:
 * Add-ons client:
   * Add-ons downloaded with clients from this version onwards are shown
     in the Remove Add-ons with their original titles from the add-ons
     server now, instead of artificially generating titles by replacing
     underscores from file names.
   * Fixed color key disparities between the Add-ons Manager dialog and the
     add-on Description dialog.
   * It is now possible to choose the neutral/fallback add-on sorting in