@@ -1,9 +1,30 @@
 #textdomain wesnoth
 [advanced_preference]
     field=compress_saves
-    name= _ "Compressed saves"
-    type=boolean
-    default=yes
+    # po: Associated save_compression_short^ entries need to be as short as
+    # po: possible to avoid stretching the advanced preferences list too
+    # po: much.
+    name= _ "Compress saved games"
+    type=combo
+    default=gzip
+    [option]
+        id=gzip
+        name= _ "save_compression^Gzip"
+        name_short= _ "save_compression_short^gzip"
+        description= _ "save_compression_desc^Default compression, faster"
+    [/option]
+    [option]
+        id=bzip2
+        name= _ "save_compression^Bzip2"
+        name_short= _ "save_compression_short^bzip2"
+        description= _ "save_compression_desc^Best compression, slower"
+    [/option]
+    [option]
+        id=none
+        name= _ "save_compression^No"
+        name_short= _ "save_compression_short^no"
+        description= _ "save_compression_desc^Large plain text files"
+    [/option]
 [/advanced_preference]
 
 [advanced_preference]
@@ -155,13 +176,6 @@
     field=show_all_units_in_help
     name= _ "Show all unit types in help"
     description= _ "Show all unit types in the help (requires restart). This does not alter the list of encountered units"
-    type=boolean
-    default=no
-[/advanced_preference]
-
-[advanced_preference]
-    field=bzip2_savegame_compression
-    name= _ "Compress savegames using bzip2"
     type=boolean
     default=no
 [/advanced_preference]
