@@ -46,6 +46,11 @@ Version 1.11.7+dev:
    * Added a party full bell to the MP game configuration screen, played once
      all human player slots have been taken.
    * Change layout for advertized games in the MP lobby and add map icon.
+   * The "Compressed saves" and "Compress savegames using bzip2" options in
+     Preferences -> Advanced have been replaced by a single option,
+     "Compressed saved games", that lets the user pick between gzip (default),
+     bzip2, and no compression. Users who previously enabled bzip2 compression
+     will need to do so again.
 
 
 Version 1.11.7:
