@@ -544,7 +544,7 @@ LEVEL_RESULT playsingle_controller::play_scenario(
 			disconnect = true;
 		}
 
-		savegame::ingame_savegame save(gamestate_, *gui_, to_config(), preferences::compress_saves());
+		savegame::ingame_savegame save(gamestate_, *gui_, to_config(), preferences::save_compression_format());
 		save.save_game_interactive(gui_->video(), _("A network disconnection has occurred, and the game cannot continue. Do you want to save the game?"), gui::YES_NO);
 		if(disconnect) {
 			throw network::error();
@@ -700,7 +700,7 @@ void playsingle_controller::before_human_turn(bool save)
 	ai::manager::raise_turn_started();
 
 	if(save && level_result_ == NONE) {
-		savegame::autosave_savegame save(gamestate_, *gui_, to_config(), preferences::compress_saves());
+		savegame::autosave_savegame save(gamestate_, *gui_, to_config(), preferences::save_compression_format());
 		save.autosave(game_config::disable_autosave, preferences::autosavemax(), preferences::INFINITE_AUTO_SAVES);
 	}
 
