@@ -20,6 +20,7 @@
 
 #include "config.hpp"
 #include "preprocessor.hpp"
+#include "serialization/compression.hpp"
 #include "serialization/parser.hpp"
 
 #include <boost/iostreams/filtering_stream.hpp>
@@ -28,8 +29,7 @@
 class config_writer
 {
 public:
-	enum compressor { NONE, GZIP, BZIP2 };
-	config_writer(std::ostream &out, compressor compress);
+	config_writer(std::ostream &out, compression::format compress);
 	config_writer(std::ostream &out, bool compress, int level = -1);
 	/** Default implementation, but defined out-of-line for efficiency reasons. */
 	~config_writer();
@@ -55,7 +55,7 @@ private:
 	boost::iostreams::filtering_stream<boost::iostreams::output> filter_;
 	std::ostream *out_ptr_;
 	std::ostream &out_;
-	compressor compress_;
+	compression::format compress_;
 	unsigned int level_;
 	std::string textdomain_;
 };
